[package]
name = "occlum_exec"
version = "0.1.0"
authors = ["GeminiCarrie <gaoyingchun@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#grpc = {path = "../../../../third_party/extern/occlum-nosgx/grpc"}
#grpc-protobuf = {path = "../../../../third_party/extern/occlum-nosgx/grpc-protobuf"}
#protobuf        = {path = "../../../../third_party/extern/occlum-nosgx/protobuf"}
#futures         =  {path = "../../../../third_party/extern/occlum-nosgx/futures"}
#env_logger      = "0.7"
#tempdir         = {path = "../../../../third_party/extern/occlum-nosgx/tempdir"}
#timer           = {path = "../../../../third_party/extern/occlum-nosgx/timer"}
#libc            = "0.2"

#log             = "0.4.8"

grpc = {git = "https://github.com/stepancheg/grpc-rust.git",branch = "v0.7"}
grpc-protobuf = {git = "https://github.com/stepancheg/grpc-rust.git",branch = "v0.7"}
protobuf        = "2.14"
futures         = "0.3"
env_logger      = "0.7"
tempdir         = "0.3"
#libc            = "0.2"
log             = "0.4.8"