[package]
name = "occlum_exec"
version = "0.1.0"
authors = ["GeminiCarrie <gaoyingchun@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mesalock_sgx"]
app = ["grpc","grpc-protobuf","protobuf","futures","tempdir","log"]
mesalock_sgx = []

[dependencies]
cfg-if     = { version = "0.1.9" }
grpc = {version = "0.7",optional = true}
grpc-protobuf = {version = "0.7",optional = true}
protobuf        ={version ="2.14",optional = true} 
futures         = {version ="0.3",optional = true}
tempdir         = {version ="0.3",optional = true}
log             = {version ="0.4.8",optional = true}

